# vertu_faq_builder

./: Dockerfile  README.md  docker-build.sh  docker-compose.yml  pyproject.toml
app/: app.py  config.py
app/core/: database.py  enum.py  managers.py  middlewares.py
app/services/answer_enhancement/: checkers.py  config.py  deps.py  enhancers.py  enum.py  extractors.py  jobs.py  models.py  rewriters.py  router.py  service.py  utils.py
app/services/qa_generation/: config.py  deps.py  enum.py  filters.py  generators.py  jobs.py  models.py  processors.py  router.py  service.py  utils.py
