[project]
name = "vertu-algorithm-service"
version = "0.1.0"
description = "vertu algorithm service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "openai>=2.15.0",
    "orjson>=3.11.5",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true